# jpegmt

./: .gitmodules  CMakeLists.txt  Libs.pri  jpeg.pro  makegen.bat
.github/workflows/: build.yml  pull_request.yml  push.yml
lib/Jpeg/: CMakeLists.txt  Jpeg.pro
lib/Jpeg/include/Jpeg/: JpegDCT.h  JpegImageMetaData.h  JpegThreadPool.h  JpegWriter.h  Rgb.h
lib/Jpeg/src/: JpegDCT.cpp  JpegFileFormat.cpp  JpegFileFormat.h  JpegThreadPool.cpp  JpegWriter.cpp
lib/Jpeg/src/Encoder/: Common.h  JpegEncoder.cpp  JpegEncoder.h  JpegEncoderBuffer.cpp  JpegEncoderBuffer.h  JpegForwardDct.cpp  JpegForwardDct.h  JpegHuffmanEncoder.cpp  JpegHuffmanEncoder.h  JpegQuantizer.cpp  JpegQuantizer.h  RgbToYcc.h
lib/Jpeg/src/Encoder/EncoderBuffer/: JpegEncoderBuffer.cpp  JpegEncoderBuffer.h  JpegEncoderBufferInt16x16.cpp  JpegEncoderBufferInt16x8.cpp  JpegEncoderBufferInt32x4.cpp  JpegEncoderBufferInt32x8.cpp  JpegEncoderBufferTemplates.h  RgbToYcc.h
lib/Jpeg/src/Encoder/ForwardDct/: JpegForwardDct.cpp  JpegForwardDctInt16x16.cpp  JpegForwardDctInt16x8.cpp  JpegForwardDctInt32x4.cpp  JpegForwardDctInt32x8.cpp  JpegForwardDctTemplates.h
lib/Jpeg/src/Encoder/HuffmanEncoder/: JpegByteStuffingInt8x16.cpp  JpegByteStuffingInt8x32.cpp  JpegByteStuffingTemplates.h  JpegHuffmanEncoder.cpp  JpegHuffmanEncoder.h  JpegHuffmanEncoderInt16x16.cpp  JpegHuffmanEncoderInt16x8.cpp  JpegHuffmanEncoderTemplates.h  JpegHuffmanEncoderUtils.h
test/: CMakeLists.txt  test.pro
test/src/: ElapsedTimer.cpp  ElapsedTimer.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  JpegLibWrapper.cpp  JpegLibWrapper.h  Stable.h  Stable.h.cpp  main.cpp
